# TranslateJPBot

./: .gitignore  .travis.yml  README.md  TranslateJPBot.cabal  jpbot.cabal  makefile  stack.yaml
app/: Main.hs
src/Data/: JMdictEntryTree.hs
src/Data/Telegram/: Chat.hs  Message.hs  Payload.hs  Update.hs  WebhookResponse.hs
src/Text/XML/: JMdictParser.hs
src/Web/: JPBotScottyServer.hs  TelegramBot.hs
test/: serverTests.sh
test/Data/: JMdictEntryTreeSpec.hs
test/Text/XML/: JMdictParserSpec.hs
test/Web/: TelegramBotSpec.hs
