name:                TranslateJPBot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/GAumala/TranslateJPBot#readme
license:             BSD3
license-file:        LICENSE
author:              Gabriel Aumala
maintainer:          gabriel@criptext.com
copyright:           2017 Gabriel Aumala
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.JMdictEntryTree
                     , Data.Telegram.Chat
                     , Data.Telegram.Message
                     , Data.Telegram.Update
                     , Data.Telegram.WebhookResponse
                     , Text.XML.JMdictParser
                     , Web.JPBotScottyServer
                     , Web.TelegramBot
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , red-black-tree
                     , xml-types
                     , xml-conduit
                     , conduit
                     , resourcet
                     , scotty
                     , text
  default-language:    Haskell2010

executable bot
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , data-default
                     , TranslateJPBot
                     , scotty
                     , wai-extra
  default-language:    Haskell2010

test-suite jmdict-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Data.JMdictEntryTreeSpec
                     , Text.XML.JMdictParserSpec
                     , Web.TelegramBotSpec
  build-depends:       base
                     , hspec
                     , TranslateJPBot
                     , red-black-tree
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GAumala/TranslateJPBot
